Ajustes no html - linha de código para js e css

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 
 <head>
   <title>
-    Imersão Dev - Aula 06
+    Tabela de Classificação
   </title>
+
+      <link rel="stylesheet" type="text/css" href="style.css">
+
+      <script src="script.js"></script>
+
+
 </head>
 
 <body>
-  <h1>Tabela de classificação</h1>
+  <h1>--- Pontuações ---</h1>
 
   <div class="form-wrapper">
     <input type="text" id="nomeDoJogador" name="nome" placeholder="Insira seu nome">
@@ -38,7 +44,7 @@
   <h3>Partidas realizadas:</h3><h3 id="partidas"></h3><br>
   
   <table>
-    <button type="submit" onclick="zerarPontuacoes()">Zerar Pontuações </button>
+    <button type="submit" onclick="zerarPontuacoes()">Zerar Pontuações</button>
     
   </table>
 
